--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "type": "git",
     "url": "http://github.com/michaelord/gatsby.git"
   },
-  "devDependencies": {
+  "devDependencies": {},
+  "author": "michaelord",
+  "keywords": [],
+  "dependencies": {
     "gatsby": "http://github.com/michaelord/gatsby.git",
     "components/editable": "http://github.com/michaelord/editable.git",
     "components/navigation": "http://github.com/michaelord/navigation.git"
-  },
-  "author": "michaelord",
-  "keywords": []
+  }
 }
